courses/430_programming-languages/assignment-8/tests/error/error38.nex
poka (falshiviy) raspetchatat 1;
